--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,3 +15,5 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+    - name: Install Dependencies
+      run: npm install sfdx
