--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,4 +14,5 @@ jobs:
     - name: Authenticate DevHub
       run: |
         echo "${{ secrets.SALESFORCE_JWT_SECRET_KEY }}" > server.key
-        node_modules/sfdx-cli/bin/run force:auth:jwt:grant --clientid ${{ secrets.SALESFORCE_CONSUMER_KEY }} --jwtkeyfile server.key --username ${{ secrets.SALESFORCE_DEVHUB_USERNAME}} --setdefaultdevhubusername -a devhub
+        node_modules/sfdx-cli/bin/run force:auth:jwt:grant --clientid ${{ secrets.SALESFORCE_CONSUMER_KEY }} --jwtkeyfile server.key --username ${{ secrets.SALESFORCE_DEVHUB_USERNAME}} --setdefaultdevhubusername --setalias devhub
+    
