--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,9 +4,7 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v1
     - name: Install Dependencies
@@ -15,4 +13,12 @@ jobs:
       run: |
         echo "${{ secrets.SALESFORCE_JWT_SECRET_KEY }}" > server.key
         node_modules/sfdx-cli/bin/run force:auth:jwt:grant --clientid ${{ secrets.SALESFORCE_CONSUMER_KEY }} --jwtkeyfile server.key --username ${{ secrets.SALESFORCE_DEVHUB_USERNAME}} --setdefaultdevhubusername --setalias devhub
+    - name: Create Scratch Org
+      run: node_modules/sfdx-cli/bin/run force:org:create --targetdevhubusername devhub --setdefaultusername --definitionfile config/project-scratch-def.json --setalias ciorg --durationdays 1
+    - name: Deploy source
+      run: node_modules/sfdx-cli/bin/run force:source:push
+    - name: Run Apex test
+      run: node_modules/sfdx-cli/bin/run force:apex:test:run --codecoverage --resultformat human
+    - name: Delete Scratch Org
+      run: node_modules/sfdx-cli/bin/run force:org:delete --noprompt
     
